[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Gui/MenuButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Gui/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://src/Assets/Fonts/Kenney Future.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/Assets/Sprites/Gui/Sample.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 4
outline_color = Color( 0.121569, 0.447059, 0.733333, 1 )
font_data = ExtResource( 4 )

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Main" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Main"]
position = Vector2( 681.392, 381.427 )
scale = Vector2( 1.47432, 1.47432 )
texture = ExtResource( 5 )

[node name="MainContainer" type="VBoxContainer" parent="Main"]
margin_left = 120.0
margin_top = 80.0
margin_right = 904.0
margin_bottom = 520.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Main/MainContainer"]
margin_right = 784.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 1 )
text = "Racing Game"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Main/MainContainer"]
margin_top = 94.0
margin_right = 784.0
margin_bottom = 440.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="buttonContainer" type="VBoxContainer" parent="Main/MainContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 221.0
margin_bottom = 270.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" parent="Main/MainContainer/VBoxContainer/buttonContainer" instance=ExtResource( 1 )]
margin_top = 0.0
margin_right = 221.0
margin_bottom = 45.0
custom_constants/hseparation = 0
text = " Play"
align = 0

[node name="Options" parent="Main/MainContainer/VBoxContainer/buttonContainer" instance=ExtResource( 1 )]
margin_top = 75.0
margin_right = 221.0
margin_bottom = 120.0
text = " Options"
align = 0

[node name="Exit" parent="Main/MainContainer/VBoxContainer/buttonContainer" instance=ExtResource( 1 )]
margin_top = 150.0
margin_right = 221.0
margin_bottom = 195.0
text = " Exit"
align = 0
[connection signal="pressed" from="Main/MainContainer/VBoxContainer/buttonContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Main/MainContainer/VBoxContainer/buttonContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Main/MainContainer/VBoxContainer/buttonContainer/Exit" to="." method="_on_Exit_pressed"]
